# Helthcare_Assistant

./: .gitignore  README.md  docker-compose.yml  new.py  pyproject.toml
backend/: Dockerfile  logger.py  main.py  pyproject.toml  requirements.txt  test.py
backend/middlewares/: exception_handlers.py
backend/modules/: hybrid_retriver.py  llm.py  load_vectorstore.py  query_handlers.py  retriever_manager.py  test_hello.py
backend/routes/: analyze_report.py  ask_questions.py  list_reports.py  upload_and_analyze_report.py  upload_pdfs.py
backend/utils/: report_store.py
frontend/: Dockerfile  index.html
